<resources>

    <!-- app informational data -->
    <string name="app_name">Message Counter</string>
    <string name="app_version">Version 3.3.0</string>
    <string name="app_code_name">Valkyrie</string>
    <string name="app_release_date">Nov 2017</string>
    <string name="app_desc">Message Counter displays messages inbox statistics and number of messages from each of your contacts.</string>
    <string name="app_disclaim">Disclaimer: This app is created for educational purposes and as such has no guarantee or support. Since undocumented Android APIs are used, this app may not work as expected on all devices.</string>
    <string name="app_source_code">This project\'s source code is available at GitHub</string>
    <string name="app_developer_info">Designed &amp; developed at ae app labs</string>

    <!-- Titles for each content fragment -->
    <string name="title_sent_list">List</string>
    <string name="title_chart">Chart</string>
    <string name="title_counter">Counter</string>
    <string name="title_ignore">Ignore</string>

    <string name="title_activity_main">Message Counter</string>
    <string name="title_list_page">MESSAGES RECEIVED</string>

    <!-- Menu item texts -->
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_license">License</string>
    <string name="menu_share">Tell your friends</string>
    <string name="menu_donate">Donate</string>

    <string name="empty_text" translatable="false"></string>
    <string name="empty_list">No messages found</string>

    <string name="message_count_inbox">%s received</string>
    <string name="message_count_sent"> %s sent</string>
    <string name="message_count_draft"> %s draft</string>
    <string name="message_count_all"> %s in total.</string>

    <string name="str_license_text" translatable="false">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n
http://www.apache.org/licenses/LICENSE-2.0\n\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>

    <string name="str_chart_title">Top message senders</string>
    <string name="str_other_senders">Others text includes messages from numbers that are not saved in your contacts, like mobile networks or financial institutions.</string>

    <!-- same for all languages - not to be translated -->
    <string name="str_zero" translatable="false">0</string>
    <string name="play_store_url" translatable="false">https://play.google.com/store/apps/details?id=com.ae.apps.messagecounter</string>
    <string name="github_source_url" translatable="false">https://github.com/midhunhk/message-counter</string>
    <string name="github_source_visible_url" translatable="false">github.com/midhunhk/message-counter</string>

    <!-- Strings for Preference -->
    <string name="str_pref_messages">Messages</string>
    <string name="str_pref_non_contact_messages">Non contact messages</string>
    <string name="str_pref_show_non_contact_message_count">Include messages from non contacts</string>
    <string name="str_pref_hide_non_contact_message_count">Exclude messages from non contacts</string>

    <!-- added for 2.2.0 -->
    <string name="str_messages_sent">Messages sent</string>
    <string name="str_this_cycle">This cycle</string>
    <string name="str_sent_today">Messages sent today</string>
    <string name="str_cycle_start_date">Cycle start date</string>
    <string name="str_sent_count">Count Sent Messages</string>
    <string name="str_enable_sent_count">For keeping track of sent messages count, you can enable this feature in settings and provide the limits</string>

    <string name="str_pref_sent_message_count">Sent Message Count</string>
    <string name="str_pref_sent_message_desc">A background service will be used to monitor sent messages</string>
    <string name="str_pref_cycle_start_desc">The start date for each cycle</string>
    <string name="str_pref_message_limit">Message limit</string>
    <string name="str_pref_message_limit_desc">Limit for messages that can be sent per cycle. Default is 100</string>

    <!-- added for 2.2.7 -->
    <string name="str_notify_on_limit">Notify on reaching limit</string>
    <string name="str_enble_notify_on_limit">Notify on reaching SMS send limit</string>
    <string name="str_sms_limit_notif_title">SMS Limit Reached</string>
    <string name="str_sms_limit_notif_text">SMS limit reached for this cycle</string>
    <string name="str_current_cycle">CURRENT CYCLE</string>
    <string name="str_previous_cycle">PREVIOUS CYCLE</string>

    <!-- added for 2.3.0 (widgets) -->
    <string name="str_messages_sent_caps">MESSAGES SENT</string>
    <string name="str_today">TODAY</string>
    <string name="str_cycle">CYCLE</string>

    <!-- added for 3.1.0 (donations) -->
    <string name="str_donate_title">Donate</string>
    <string name="str_donate_text">Message Counter is an open source project developed in my spare time. Any sort of contribution helps to add features or swat bugs. Thank you!</string>
    <string name="str_donate_disclaimer">Donations will not be  in lieu of additional features. Google takes 30% of purchases as transaction fees.</string>
    <string name="str_donate_thanks">Thank you for donating!</string>
    <string name="str_donate_fail">Donation failed. Please try again later.</string>
    <string name="str_donate_small">Buy me a Chocolate</string>
    <string name="str_donate_medium">Buy me an Ice-Cream</string>
    <string name="str_donate_large">Buy me Dinner</string>
    <string name="str_sent_this_week">Sent this Week</string>

    <!-- added for 3.2.0 -->
    <string name="str_pref_experimental">Experimental</string>
    <string name="str_offline_messages">Count offline Messages</string>
    <string name="str_pref_offline_message_desc">Check for messages sent while the background service was offline on next startup</string>

    <!-- added for 3.3.0 -->
    <string name="str_ignore_title">Ignore List</string>
    <string name="str_ignore_add_number">Add a Number</string>
    <string name="str_ignore_add_to_ignore_list">Add To Ignore List</string>
    <string name="str_ignore_btn_ignore">Ignore</string>
    <string name="str_ignore_name">Name</string>
    <string name="str_ignore_number">Number</string>
    <string name="str_ignore_empty_list">Start by adding a number to ignore</string>

</resources>