<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- The toolbar -->

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_large" >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/padding_small" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:padding="@dimen/padding_medium" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dip"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:drawablePadding="@dimen/padding_small"
                        android:drawableTop="@drawable/icon_gift"
                        android:text="@string/str_donate_text" />
                </FrameLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/padding_small" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium" >

                    <Button
                        android:id="@+id/btnDonateSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_medium"
                        android:text="@string/str_donate_small" />

                    <Button
                        android:id="@+id/btnDonateMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_medium"
                        android:text="@string/str_donate_medium" />

                    <Button
                        android:id="@+id/btnDonateLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_medium"
                        android:text="@string/str_donate_large" />

                    <include layout="@layout/separator_line" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dip"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:text="@string/str_donate_disclaimer"
                        android:textSize="12sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>