<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout android:id="@+id/drawer_layout"
                                        xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">


    <!-- setting the coordinator layout inorder to pull the bottom navigation view down to the bottom-->
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <!--The bottom navigation -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/bottom_navigation_height"
            android:orientation="vertical">

            <!-- The toolbar -->

            <include layout="@layout/toolbar"/>

            <!-- Load Fragments into this container -->

            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigationBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="?android:attr/windowBackground"
            app:layout_insetEdge="bottom"
            app:itemBackground="@drawable/bottom_navigation_selector"
            app:itemIconTint="@color/bottom_navigation_color_selector"
            app:itemTextColor="@color/bottom_navigation_color_selector"
            app:menu="@menu/bottom_navigation_menu"/>

    </android.support.design.widget.CoordinatorLayout>


    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/navbar_bg"
            android:padding="@dimen/padding_medium">

            <TextView
                android:id="@+id/appCodeName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="90dip"
                android:paddingStart="90dip"
                android:text="@string/app_code_name"
                android:textColor="@color/white"
                android:textSize="@dimen/card_title"
                android:textStyle="bold"/>
        </RelativeLayout>

        <!-- Layout for the Left Navigation Drawer -->
        <ListView
            android:id="@+id/left_drawer_list"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/white"
            android:divider="@android:color/transparent"/>

        <Button
            android:id="@+id/navDonate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawableLeft="@drawable/nav_icon_donate"
            android:drawablePadding="@dimen/padding_medium"
            android:drawableStart="@drawable/nav_icon_donate"
            android:gravity="start"
            android:padding="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:text="@string/str_donate_title"
            android:textSize="@dimen/card_title"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/navSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawableLeft="@drawable/nav_icon_settings"
            android:drawablePadding="@dimen/padding_medium"
            android:drawableStart="@drawable/nav_icon_settings"
            android:gravity="start"
            android:padding="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:text="@string/menu_settings"
            android:textSize="@dimen/card_title"
            android:textStyle="bold"/>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>